--- a/static/locales/it.json
+++ b/static/locales/it.json
@@ -19,7 +19,7 @@
   "career":{
     "my_career": "My Career",
     "pandora": "Pandora Media Inc.",
-    "pandora_des": "'m currently a Music Science intern at Pandora Media Inc. (Oakland, CA, USA). I'm working with Tao Ye, Erik Schmidt and Puya-Hossein on Deep Learning algorithms for sequence classification.",
+    "pandora_des": "'m currently a Music Science intern at Pandora Media Inc. (Oakland, CA, USA). I'm working with Tao Ye, Erik Schmidt and Puya-Hossein Vahabi on Deep Learning algorithms for sequence classification.",
     "pandora_date": "Jun 2016",
     "pandora_job": "Intern",
     "telefonica": "Telefonica I+D",
